 o progress callback: skip last callback update on errors [9]
 o nss: fix a memory leak when CURLOPT_CRLFILE is used
 o compiler warnings: potentially uninitialized variables [10]
 o url.c: Fixed memory leak on OOM
 o gnutls: ignore invalid certificate dates with VERIFYPEER disabled
 o gnutls: fix SRP support with versions of GnuTLS from 2.99.0
 o gnutls: fixed a couple of uninitialized variable references
 o gnutls: fixed compilation against versions < 2.12.0
 o build: Fixed overridden compiler PDB settings in VC7 to VC12
 o ntlm_wb: Fixed buffer size not being large enough for NTLMv2 sessions [11]
 o netrc: don't abort if home dir cannot be found

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

  Alessandro Ghedini, Brad Spencer, Chris Young, Colin Hogben, Dan Fandrich,
  Daniel Stenberg, David Woodhouse, Dimitrios Siganos, Dmitry Falko,
  Fabian Frank, Hubert Kario, Jonathan Cardoso Machado, Kamil Dudka,
  Lindley French, Marcel Raad, Michal Górny, Nick Zitzmann, Patrick Monnerat,
  Ray Satiro, Steve Holme, Tatsuhiro Tsujikawa, Vilmos Nebehaj,
  Glen A Johnson Jr.

        Thanks! (and sorry if I forgot to mention someone)

References to bug reports and discussions on issues:

 [1] = http://curl.haxx.se/bug/view.cgi?id=1375
 [2] = http://curl.haxx.se/mail/lib-2014-05/0235.html
 [3] = http://curl.haxx.se/mail/lib-2014-05/0260.html
 [4] = http://curl.haxx.se/mail/lib-2014-05/0278.html
 [5] = http://curl.haxx.se/mail/lib-2014-06/0001.html
 [6] = http://curl.haxx.se/mail/lib-2014-06/0003.html
 [7] = http://curl.haxx.se/bug/view.cgi?id=1378
 [8] = http://curl.haxx.se/bug/view.cgi?id=1380
 [9] = http://curl.haxx.se/mail/lib-2014-06/0062.html
 [10] = http://curl.haxx.se/bug/view.cgi?id=1391
 [11] = http://curl.haxx.se/mail/lib-2014-07/0103.html